# ChangeLog for app-emulation/libvirt
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.359 2014/04/21 08:00:15 ago Exp $

  21 Apr 2014; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.3.4.ebuild,
  libvirt-1.2.3.ebuild:
  Stable for x86, wrt bug #502232

  21 Apr 2014; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.3.4.ebuild,
  libvirt-1.2.3.ebuild:
  Stable for amd64, wrt bug #502232

  20 Apr 2014; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  Fix up description of USE=qemu

*libvirt-1.1.3.4 (20 Apr 2014)

  20 Apr 2014; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.3.4.ebuild:
  Version bump stable series.

*libvirt-1.2.3 (20 Apr 2014)

  20 Apr 2014; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.2.3.ebuild:
  Version bump. bug #506560

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> libvirt-1.1.3.3.ebuild,
  libvirt-1.2.1.ebuild, libvirt-9999.ebuild:
  Update libgcrypt dep to use slot :0.

  27 Jan 2014; Doug Goldstein <cardoe@gentoo.org> -libvirt-1.1.3-r1.ebuild,
  -libvirt-1.1.3.1.ebuild, -libvirt-1.2.0-r1.ebuild:
  Remove older vulnerable versions.

  25 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.3.3.ebuild,
  libvirt-1.2.1.ebuild:
  Stable for amd64, wrt bug #498534

  25 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.3.3.ebuild,
  libvirt-1.2.1.ebuild:
  Stable for x86, wrt bug #498534

  22 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libvirt-1.2.0-r1.ebuild:
  Stable for x86, wrt bug #496204

  22 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libvirt-1.2.0-r1.ebuild:
  Stable for amd64, wrt bug #496204

  19 Jan 2014; Doug Goldstein <cardoe@gentoo.org> -libvirt-1.0.5.6.ebuild,
  -libvirt-1.1.3-r2.ebuild, -libvirt-1.1.4.ebuild, -libvirt-1.2.0.ebuild:
  Remove a slew of older versions

*libvirt-1.1.3.3 (19 Jan 2014)

  19 Jan 2014; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.3.3.ebuild:
  Bump stable series to fix outstanding CVEs.
